apps/base/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - immich.passer.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
